# sili__new

./: .gitignore  Doxyfile  README.md  TODO.md  energy-params.md  energy-personality.md  energy-proofs.md  pyproject.toml  refactoring_done.md  refactoring_todo.md  requirements.txt  setup.py
backburner/fiber_concurrency/: README.md
docs/: generate_docs.sh  requirements_vlm_streaming_rtac.md
examples/: atari_run.py  mandelbrot_rl.py  sanity_checks.py  sparse_sanity_checks.py
sili/: __init__.py  backend.py  cpu.py  cpu_backend.cpp  energy.py  module.py  rl_utils.py  sparse_rnn.py  tensor.py
sili/conversion/: model_reconstruct.py  rnn_fold.py  sparse_prune.py  sparse_runtime.py  streaming_prune.py  trace_model.py
sili/lib/headers/: attention.hpp  coo.hpp  csr.hpp  delta_csr_memory.hpp  delta_csr_ops.hpp  delta_csr_types.hpp  fp4quant.hpp  hoyer_sparsify.hpp  linear_disldo.hpp  linear_sisldo.hpp  loss.hpp  parallel.hpp  scan.hpp  sparse_struct.hpp  synapse.hpp
test/: CMakeLists.txt  integration_test_sisldo.cpp  run_cpp_tests.sh  run_py_tests.sh  test_attention.cpp  test_conv2d.cpp  test_coo.cpp  test_csr.cpp  test_disldo_synaptogenesis.cpp  test_fiber.cpp  test_hoyer_sparsify.cpp  test_linear.cpp  test_outer_product.cpp  test_parallel.cpp  test_scale_handling.cpp  test_sisldo_neurogenesis.cpp  test_stats_thread_safety.cpp  test_unique_vector.cpp  tests_main.hpp  unittest_sisldo.cpp
test/python/: gen_toy_mistral.py  gen_toy_mistral_vlm.py  multimodal_sparse_rnn.py  sparse_tcnn_audio.py  test_sili.py
tests/backburner/: peaked_init_notes.md
tests/integration/: benchmark_synaptogenesis.py  experiment_mandelbrot.py  test_energy_rnn.py  test_mandelbrot_rl.py  test_multifamily_fold.py  test_popart.py  test_sparse_rnn.py  test_streaming_prune.py  test_toy_mistral.py  test_toy_safetensors_roundtrip.py  test_transformer.py
tests/unit/: CMakeLists.txt  integration_test_sisldo.cpp  run_py_tests.sh  run_tests.sh  test_attention.cpp  test_cache_info.cpp  test_coo.cpp  test_disldo_synaptogenesis.cpp  test_hoyer_sparsify.cpp  test_scale_handling.cpp  test_sisldo_neurogenesis.cpp  test_stats_thread_safety.cpp  unittest_sisldo.cpp
tests/unit/python/: gen_toy_mistral_vlm.py  multimodal_sparse_rnn.py  sparse_tcnn_audio.py
